frontend/test/should_pass/hom_004.grg
rule r {
	pattern {
		x:Node -e:Edge-> y:Node -f:Edge-> z:Node;
		hom(x);
	}
	replace {
		x <-:Edge- y <-- z;
	}
}

