frontend/test/should_fail/hom_001.grg
rule r {
	pattern {
		x:Node -e:Edge-> y:Node -f:Edge-> z:Node;
		hom(x, y);
		hom(z, y);
	}
	replace {
		x <-:Edge- y <-- z;
	}
}

